# DjangoAccounts

./: .dockerignore  .eslintrc  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-entrypoint.sh  package.json  pyproject.toml  webpack.config.js
apps/frontend/src/: App.js  App.jsx  index.jsx
apps/frontend/src/actions/: accounts.js
apps/frontend/src/components/: Error.jsx
apps/frontend/src/components/Accounts/: AddForm.jsx  Form.jsx  Item.jsx  List.jsx  index.js
apps/frontend/src/components/Accounts/Form/: Add.jsx  Edit.jsx  Helpers.js
apps/frontend/src/components/Accounts/Table/: DataRow.jsx
apps/frontend/src/components/Elements/: FileInput.jsx  Input.jsx
apps/frontend/src/fetcher/: accounts.js  helper.js
apps/frontend/src/reducers/: accounts.js
apps/frontend/src/scss/: index.scss
apps/frontend/templates/frontend/: index.html
apps/user/accounts/: apps.py  models.py  serializers.py  urls.py  validators.py  views.py
apps/user/accounts/migrations/: 0001_initial.py  0002_auto_20191001_1050.py
config/: settings.py  urls.py
